# sdl-xo-multiplayer

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  AGENTS.toml  CMakeLists.txt  LICENSE  conanfile.txt  sonar-project.properties
.github/workflows/: ci.yml
include/core/: Board.hpp  Game.hpp
src/app/: main.cpp
src/core/: Board.cpp  Game.cpp
tests/: test_board.cpp  test_game.cpp
